tests/NormalTests/paczka2/big_fuzzy/16997661.err
Error in line 31: 1ixAwdxG S20 28,5
Error in line 16: DwcQtynPq S20 29,4
Error in line 53: 6lIC A94 11,41
Error in line 56: A94 S20 59,17
Error in line 40: 1ixAwdxG S20 66,3
Error in line 43: 6lIC S21 82,1
Error in line 58: 1ixAwdxG A567 2,5
Error in line 67: 1ixAwdxG S21 73,6
Error in line 82: pbl _21 98,9
Error in line 94: AKh6QHPO S21 8,2
Error in line 100: 6lIC A567 3,1
Error in line 119: DwcQtynPq S21 81,0
Error in line 115: AKh6QHPO A567 69,8
Error in line 124: AKh6QHPO S20 36,4
Error in line 125: 6lIC A567 76,5
Error in line 136: AKh6QHPO A567 61,4
Error in line 137: AKh6QHPO S21 86,3
Error in line 149: AKh6QHPO A94 43,9
Error in line 152: AKh6QHPO S20 14,0
Error in line 156: AKh6QHPO A94 55,7
Error in line 160: DwcQtynPq S20 32,7
Error in line 154: 1ixAwdxG A94 77,3
Error in line 161: YaHw85rYvPL A94 54,1
Error in line 162: A94 A567 14,8
Error in line 168: 6lIC S21 32,7
Error in line 180: 1ixAwdxG A567 21,8
Error in line 181: YaHw85rYvPL A567 23,0
Error in line 186: DwcQtynPq A94 23,2
Error in line 187: DwcQtynPq S20 50,8
Error in line 192: DwcQtynPq A567 46,7
Error in line 200: DwcQtynPq A94 15,1
Error in line 210: 6lIC S21 87,4
Error in line 204: DwcQtynPq S20 61,2
Error in line 224: AKh6QHPO S21 0,1
Error in line 221: 6lIC A94 7,1
Error in line 236: A94 S21 2h,3
Error in line 231: 6lIC A567 56,9
Error in line 240: 6lIC S20 16,0
Error in line 241: 6lIC A94 67,1
